--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <center><h1>Number Guessing</h1></center>
 <center><h3>Guess a number between 1 to 10:</h3></center>
-<div>
+<div class="text">
 <center><input type="text" id="number">
 <input type="button" value="Guess" onclick="compare()"></center>
 </div>
